force-app/main/default/objects/Catalog_Pulse_Item__c/Catalog_Pulse_Item__c.object-meta.xml
<CustomObject>
    <description
  >Persisted, queryable catalog novelty feed for the Buyer Group Catalog Pulse feature. Records are created/updated by the Catalog_Pulse_Event__e subscriber and read by the storefront controller (entitlement-aware). The OBJECT is metadata; the RECORDS are runtime data (ADR-0003). Private sharing: buyers reach it only through the without-sharing Apex controller that re-validates entitlements.</description>
    <label>Catalog Pulse Item</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Catalog Pulse Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Pulse Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>