force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description
  >Business classification of the novelty, mirrored from the platform event.</description>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>PRICE_DROP</fullName>
                <label>Price drop</label>
            </value>
            <value>
                <fullName>RESTOCK</fullName>
                <label>Restock</label>
            </value>
            <value>
                <fullName>UPDATED</fullName>
                <label>Updated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>