force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description
  >When the novelty starts being shown to buyers. Drives carousel ordering (most recent first).</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>