force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description
  >When the novelty stops being shown. Null means no expiration. The controller filters out items whose expiration is in the past.</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>