force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description
  >Longer human-readable description shown in the carousel card and reusable by a future Agentforce summary action.</description>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>