force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description
  >Relative importance of the novelty, used for ordering and future Agentforce prioritisation.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LOW</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>NORMAL</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>HIGH</fullName>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>