force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Product2 this novelty refers to. Used to join against CommerceEntitlementProduct so the controller only surfaces products the buyer is actually entitled to see.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Catalog Pulse Items</relationshipLabel>
    <relationshipName>Catalog_Pulse_Items</relationshipName>
    <type>Lookup</type>
</CustomField>