force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description
  >Denormalised product SKU / code for display and reporting without an extra join.</description>
    <label>Product Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>