force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Pulse_Key__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Key__c</fullName>
    <description
  >Idempotent upsert key: productId|changeType|segmentKey (segmentKey defaults to GLOBAL when null). Guarantees the subscriber does not create duplicate novelties for the same product/change/segment.</description>
    <externalId>true</externalId>
    <label>Pulse Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>