force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Segment_Key__c.field-meta.xml
<CustomField>
    <fullName>Segment_Key__c</fullName>
    <description
  >Functional segment key (e.g. Buyer Group name) this novelty is relevant for. Null means global (all segments). Filtering only; the security boundary is the entitlement join, not this field.</description>
    <label>Segment Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>