force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description
  >Object that originated the change (mirrored from the platform event) for traceability and reporting.</description>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>