force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Lifecycle state of the novelty: ACTIVE (shown), EXPIRED (aged out) or HIDDEN (manually suppressed). Only ACTIVE items are returned to the storefront.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
                <label>Expired</label>
            </value>
            <value>
                <fullName>HIDDEN</fullName>
                <label>Hidden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>