force-app/main/default/objects/Catalog_Pulse_Item__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description
  >Short human-readable headline shown in the carousel card.</description>
    <label>Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>